# enbt

./: CMakeLists.txt  README.md
include/: parse.hpp  serialize.hpp
src/: NBTReader.cpp  NBTWriter.cpp  main.cpp  parse.cpp  serialize.cpp
tests/: CMakeLists.txt  test_nbt_reader.cpp  test_reverse_conversion.cpp  test_serialization.cpp
